--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -80,7 +80,7 @@
                                         </span>
                                         <span class="text-uppercase">Continue Shopping</span>
                                     </a>
-                                    <a href="" class="btn btn-dark btn-lg text-uppercase text-light">
+                                    <a href="{% url 'checkout' %}" class="btn btn-dark btn-lg text-uppercase text-light">
                                         <span class="text-uppercase">Secure Checkout</span>
                                         <span class="icon">
                                             <i class="fas fa-lock"></i>
