--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -18,8 +18,8 @@
         </div>
 
         <div class="row justify-content-center">
-            <div class="col-6">
-                <div class="order-confirmation-wrapper p-2 border mt-4 mb-4">
+            <div class="col-8">
+                <div class="order-confirmation-wrapper p-2 border rounded mt-4 mb-4">
                     <div class="row">
                         <div class="col">
                             <h5 class="mt-2 mb-1">Order Info:</h5>
@@ -58,7 +58,7 @@
                             </p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0">{{ item.quantity }} @ ${{ item.product.price }} each</p>
+                            <p class="mb-0">{{ item.quantity }} x € {{ item.product.price }} each</p>
                         </div>
                     </div>
                     {% endfor %}
@@ -158,7 +158,7 @@
                             <p class="mb-0">Order Total</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0">{{ order.order_total }}</p>
+                            <p class="mb-0">€ {{ order.order_total }}</p>
                         </div>
                     </div>
 
@@ -167,7 +167,7 @@
                             <p class="mb-0">Delivery</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0">{{ order.delivery_cost }}</p>
+                            <p class="mb-0">€ {{ order.delivery_cost }}</p>
                         </div>
                     </div>
                     <hr class="w-100 mb-1 mt-1">
@@ -176,7 +176,7 @@
                             <p class="font-weight-bold mb-0">Grand Total</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="font-weight-bold mb-0">{{ order.grand_total }}</p>
+                            <p class="font-weight-bold mb-0">€ {{ order.grand_total }}</p>
                         </div>
                     </div>
                 </div>
