--- a/static/css/base.css
+++ b/static/css/base.css
@@ -85,10 +85,13 @@ a.dropdown-item:hover {
     border-radius: calc(.25rem - 1px) !important;
 }
 
+/* Toasts */
+
 .message-container {
     position: fixed;
-    top: 79px;
-    right: 25px;
+    top: 95px;
+    right: 70px;
+    min-width: 260px;
     z-index: 99999999999;
 }
 
@@ -98,35 +101,6 @@ a.dropdown-item:hover {
 
 .toast-capper {
     height: 2px;
-}
-
-/* Toasts */
-
-.arrow-up {
-    width: 0; 
-    height: 0; 
-    border-left: 4px solid transparent;
-    border-right: 4px solid transparent; 
-    border-bottom: 10px solid black;
-    position: absolute;
-    top: -8px;
-    right: 220px;
-}
-
-.arrow-success {
-    border-bottom-color: #28a745 !important;
-}
-
-.arrow-danger {
-    border-bottom-color: #dc3545 !important;
-}
-
-.arrow-warning {
-    border-bottom-color: #ffc107 !important;
-}
-
-.arrow-info {
-    border-bottom-color: #17a2b8 !important;
 }
 
 /* Allauth forms */
