--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -184,12 +184,21 @@
         </div>
 
         <div class="my-4 text-center">
-            <a href="{% url 'checkout' %}" class="btn btn-dark btn-lg text-uppercase text-light">
-                <span class="icon">
-                    <i class="fas fa-chevron-left"></i>
-                </span>
-                <span class="text-uppercase">Continue Shopping</span>
-            </a>
+            {% if from_profile %}
+                    <a href="{% url 'profile' %}" class="btn btn-dark btn-lg text-uppercase text-light">
+                        <span class="icon mr-2">
+                            <i class="fas fa-angle-left"></i>
+                        </span>
+                        <span class="text-uppercase">Back to Profile</span>
+                    </a>
+            {% else %}
+                <a href="{% url 'checkout' %}" class="btn btn-dark btn-lg text-uppercase text-light">
+                    <span class="icon">
+                        <i class="fas fa-chevron-left"></i>
+                    </span>
+                    <span class="text-uppercase">Continue Shopping</span>
+                </a>
+            {% endif %}
         </div>
     </div>
 {% endblock %}
