--- a/templates/base.html
+++ b/templates/base.html
@@ -79,13 +79,13 @@
                   <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
                   {% endif %}
                   <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-                  <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                  <a href="{% url 'account_logout' %}" class="dropdown-item">Sign Out</a>
                   {% else %}
                   <a href="{% url 'account_signup' %}" class="dropdown-item"
                     >Sign Up</a
                     >
                   <a href="{% url 'account_login' %}" class="dropdown-item"
-                    >Log In</a>
+                    >Sign In</a>
                   {% endif %}
                 </div>
               </li>
